--- a/ADMIN/add-acount.html
+++ b/ADMIN/add-acount.html
@@ -14,9 +14,12 @@
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Thư Viện Charjs -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Thư Viện SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <link rel="stylesheet" href="./css/style.css">
-    <title>Đơn hàng</title>
+    <link rel="stylesheet" href="./css/add-acount.css">
+    <title>Thông tin tài khoản</title>
 </head>
 
 <body>
@@ -56,12 +59,12 @@
                                 </span>
                             </a>
                             <ul class="cat-sub-menu">
-                                <li><a href="./change-info.html">Sửa thông tin</a></li>
+                                <li><a class="" href="./change-info.html">Sửa thông tin</a></li>
                                 <li><a href="./acount-setting.html">Quản lý tài khoản</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a class="show-cat-btn active" href="">
+                            <a class="show-cat-btn" href="">
                                 <i class="fa fa-edit"></i>Quản Lý
                                 <span class="category__btn transparent-btn">
                                     <i class="fa fa-chevron-circle-down"></i>
@@ -69,7 +72,7 @@
                             </a>
                             <ul class="cat-sub-menu">
                                 <li><a href="./list-products.html">Danh Sách Sản Phẩm</a></li>
-                                <li><a class="active" href="./order.html">Đơn Hàng</a></li>
+                                <li><a href="./order.html">Đơn Hàng</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -101,101 +104,72 @@
             </nav>
             <div class="container p-4">
                 <h2 class="main-title fw-bold fs-5 lh-1 mb-4">Bảng Điều Khiển</h2>
-                <div class="recent-orders overflow-scroll">
-                    <table style="min-width: 1400px;" class="gap-5">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Sản phẩm
-                                    </label>
-                                </th>
-                                <th>Tên sản phẩm</th>
-                                <th>Khách hàng</th>
-                                <th>Tính trạng đơn hàng</th>
-                                <th>Tình trạng thanh toán</th>
-                                <th>Ngày</th>
-                                <th>Giá</th>
-                            </tr>
-                        </thead>
-                        <tbody class="bg-white">
-                            <tr>
-                                <td>
-                                    <label class="form-check-label d-flex align-items-center">
-                                        <img src="./img/ip14-prm-black.webp" alt="" style="max-height: 50px;">
-                                    </label>
-                                </td>
-                                <td>iPhone 14 Promax - chính hãng VN/A</td>
-                                <td>
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <img src="./img/icons8-avatar.gif" alt="ảnh đại diện" style="max-width: 30px;">
-                                        <small>Trần Phước Anh</small>
+                <div class="info p-3">
+                    <div class="info__title">
+                        <h5>Thêm Sản Phẩm</h5>
+                        <small>Nhập thông tin sản phẩm</small>
+                    </div>
+                    <hr>
+                    <div class="info__body row flex-column-reverse flex-lg-row">
+                        <div class="info__body__form col-12 col-md-12 col-lg-7">
+                            <form class="fs-6" id="add-product-form">
+                                <div class="row mb-3">
+                                    <label for="inputId" class="col-sm-3 col-form-label text-start">Mã tài khoản</label>
+                                    <div class="col-sm-8">
+                                        <input type="number" class="form-control shadow-none" id="inputId" value="1"
+                                            disabled>
                                     </div>
-                                </td>
-                                <td>
-                                    <span class="processing">Đang xử lý</span>
-                                </td>
-                                <td class="paid">
-                                    <div class="dot rounded-circle d-inline-block"></div>
-                                    Đã thanh toán
-                                </td>
-                                <td>16-06-2023</td>
-                                <td>26.000.000 VNĐ</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label class="form-check-label d-flex align-items-center">
-                                        <img src="./img/ip14-prm-black.webp" alt="" style="max-height: 50px;">
-                                    </label>
-                                </td>
-                                <td>iPhone 14 Promax - chính hãng VN/A</td>
-                                <td>
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <img src="./img/icons8-avatar.gif" alt="ảnh đại diện" style="max-width: 30px;">
-                                        <small>Trần Phước Anh</small>
+                                </div>
+                                <div class="row mb-3 align-items-center">
+                                    <label for="inputName" class="col-sm-3 col-form-label text-start">Họ tên</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control shadow-none" id="inputName" required>
                                     </div>
-                                </td>
-                                <td>
-                                    <span class="delivery">Đang giao hàng</span>
-                                </td>
-                                <td class="paid">
-                                    <div class="dot rounded-circle d-inline-block"></div>
-                                    Đã thanh toán
-                                </td>
-                                <td>16-06-2023</td>
-                                <td>26.000.000 VNĐ</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label class="form-check-label d-flex align-items-center">
-                                        <img src="./img/ip14-prm-black.webp" alt="" style="max-height: 50px;">
-                                    </label>
-                                </td>
-                                <td>iPhone 14 Promax - chính hãng VN/A</td>
-                                <td>
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <img src="./img/icons8-avatar.gif" alt="ảnh đại diện" style="max-width: 30px;">
-                                        <small>Trần Phước Anh</small>
+                                </div>
+                                <div class="row mb-3 align-items-center">
+                                    <label for="inputImage" class="col-sm-3 col-form-label text-start">Hình ảnh
+                                        (URL)</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control shadow-none" id="inputImage" required>
                                     </div>
-                                </td>
-                                <td>
-                                    <span class="successful">Giao hàng thành công</span>
-                                </td>
-                                <td class="unpaid">
-                                    <div class="dot rounded-circle d-inline-block"></div>
-                                    Chưa thanh toán
-                                </td>
-                                <td>16-06-2023</td>
-                                <td>26.000.000 VNĐ</td>
-                            </tr>
+                                </div>
+                                <div class="row mb-3 align-items-center">
+                                    <label for="inputMail" class="col-sm-3 col-form-label text-start">Email</label>
+                                    <div class="col-sm-8">
+                                        <input type="email" class="form-control shadow-none" id="inputMail" required>
+                                    </div>
+                                </div>
+                                <div class="row mb-3 align-items-center">
+                                    <label for="inputPhone" class="col-sm-3 col-form-label text-start">Số điện
+                                        thoại</label>
+                                    <div class="col-sm-8">
+                                        <input type="tel" class="form-control shadow-none" id="inputPhone" required>
+                                    </div>
+                                </div>
 
-                        </tbody>
-                    </table>
+                                <div class="row align-items-center">
+                                    <div class="col-0"></div>
+                                    <div class="col-12">
+                                        <button class="btn btn-primary border-0" id="save"
+                                            style="background-color: #0F94CF;">
+                                            Lưu
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div
+                            class="info__body__avatar col-12 col-md-12 col-lg-5 d-flex flex-column align-items-center py-4">
+                            <div class="avatar mb-3 rounded-circle" id="productImage"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
     </div>
 
     <script src="./js/index.js"></script>
+    <script src="./js/add-product.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
