fix content sign-up

--- a/SIGNUP/index.html
+++ b/SIGNUP/index.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <a href="#">Quên mật khẩu?</a>
-            <p>Chưa có tài khoản? <a href="#">Đăng kí</a></p>
+            <p>Đã có tài khoản? <a href="../LOGIN/index.html">Đăng nhập</a></p>
           </form>
         </div>
         <div class="col-lg-5">
